# game-of-life

./: Cargo.toml  README.MD
src/: main.rs
